# AI-Customer-Support

./: .gitignore  .replit  README.md  package.json  pnpm-lock.yaml
app/: page.tsx
app/chat/: page.tsx
client/: README.md  package-lock.json  package.json  pnpm-lock.yaml
client/.next/: app-build-manifest.json  build-manifest.json  trace
client/.next/server/: _error.js  app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  pages-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
client/.next/server/app/: page.js  page_client-reference-manifest.js
client/.next/server/pages/: _error.js
client/.next/server/vendor-chunks/: @fortawesome+fontawesome-svg-core@6.6.0.js  @fortawesome+free-solid-svg-icons@6.6.0.js  @fortawesome+react-fontawesome@0.2.2_@fortawesome+fontawesome-svg-core@6.6.0_react@18.3.1.js  @heroicons+react@2.1.5_react@18.3.1.js  @radix-ui+react-compose-refs@1.1.0_@types+react@18.3.3_react@18.3.1.js  @radix-ui+react-slot@1.1.0_@types+react@18.3.3_react@18.3.1.js  @swc+helpers@0.5.5.js  clsx@2.0.0.js  (+8 more)
client/app/: layout.tsx  page.tsx
client/app/chat/: page.tsx
client/lib/gemini/: gemini.ts
lib/gemini/: gemini.tsx
ml/: .env  main.ipynb  test.ipynb
ml/server/: .env  README.md  pyproject.toml  rag.ipynb
ml/server/.ipynb_checkpoints/: rag-checkpoint.ipynb
ml/server/app/: chain.py  server.py
ml/server/copilot/: .workspace
ml/server/copilot/environments/aicustomersupport/: manifest.yml
ml/server/copilot/service/: manifest.yml
ml/temp/: rag.py
(+224 files in other folders)
