[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = ">=2.7.4,<3.0.0"
langchain-pinecone = "^0.1.3"
langchain-huggingface = "^0.0.3"
langchain-community = "^0.2.11"
langchain-core = "^0.2.29"
pinecone = "^5.0.0"
openai = "^1.40.2"
tiktoken = "^0.7.0"
fastapi = "^0.112.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
